--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <!--social buttons-->
       <section id="social">
         <a target="_blank" href="https://twitter.com/share?hashtags=super-lander&text=You can land on Mars in this game. How awesome is this?" id="twitter-share-button" data-lang="en">Tweet</a>
-        <a target="_blank" href="http://www.facebook.com/sharer.php?u=http://twach.org/sl/super-lander.html&t=You can land on Mars in this game. How awesome is this?" id="facebook-share-button"  data-lang="en">Share</a>
+        <a target="_blank" href="http://www.facebook.com/sharer.php?u=http://hermanya.github.io/lander/&t=You can land on Mars in this game. How awesome is this?" id="facebook-share-button"  data-lang="en">Share</a>
         <!--a target="_blank" href="https://plus.google.com/share?url=http://twach.org/sl/super-lander.html"  id="google-share-button" data-lang="en">Google+</a-->
-        <a target="_blank" href="http://vkontakte.ru/share.php?url=http://twach.org/sl/super-lander.html&title=Super Lander&description=В этой игре ты приземляешься на Марс. Насколько это круто?"  id="vk-share-button" data-lang="en">VK</a>
+        <a target="_blank" href="http://vkontakte.ru/share.php?url=http://hermanya.github.io/lander/&title=Super Lander&description=В этой игре ты приземляешься на Марс. Насколько это круто?"  id="vk-share-button" data-lang="en">VK</a>
         <a target="_blank" href="https://github.com/Hermanya/lander" id="github-button">GitHub</a>
       </section>
     </menu>
